#106: fix css alignment for logout icon and give higher precedence to bootstrap css.

--- a/src/static/jeeqs.css
+++ b/src/static/jeeqs.css
@@ -7,7 +7,6 @@ body {
     float: right;
     background-color: #f0f8ff;
     height: 45px;
-    font-size: 16px;
     /*font-family: sans-serif;*/
 }
 
